# AversivePlusPlus

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  Makefile  README.md  conanfile.py  targets.mk
cmake/toolchain/: Makefile  conanfile.py  generic.cmake
cmake/toolchain/test/: Makefile  conanfile.py  main.cpp
examples/project-2wheel-asserv/: .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.py
examples/project-2wheel-asserv/src/: main.cpp
examples/template-project/: .gitignore  CMakeLists.txt  Makefile  conanfile.py  deploy.sh
examples/template-project/src/: main.cpp
modules/base/: .gitignore  .travis.yml  Makefile  README.md  conanfile.py  module.cmake
modules/base/test/: CMakeLists.txt  test.cpp
modules/cas/: CMakeLists.txt  module.cmake
modules/cas/include/cas/: derivate.hpp  function.hpp  matrix_simplify.hpp  return_rule.hpp  simplify.hpp
modules/cas/test/: CMakeLists.txt  test.cpp
modules/cmsis-core/: README.md  module.cmake
modules/cmsis-stm32f4xx/: README.md  module.cmake
modules/coap/: .travis.yml  CMakeLists.txt  Makefile  conanfile.py
modules/coap/include/coap/: chain_handler.hpp  coap.hpp  handler.hpp  packet_reader.hpp  packet_writer.hpp  parser.hpp  protocol.hpp  simple_discovery.hpp
modules/coap/include/ext/: input_stream.hpp  parser.hpp
modules/coap/src/: coap.cpp
modules/coap/test/: Makefile  conanfile.py  main.cpp
modules/container/: .gitignore  .travis.yml  Makefile  README.md  conanfile.py  module.cmake
modules/container/test/array/: CMakeLists.txt  main.cpp
modules/device/: .travis.yml  Makefile  README.md  conanfile.py  module.cmake
modules/device-2wheel/: .travis.yml  Makefile  conanfile.py  module.cmake
modules/device-2wheel/test/: CMakeLists.txt  conanfile.py  main.cpp  test.cpp
modules/device-control/: .travis.yml  Makefile  conanfile.py  module.cmake
modules/device-control/test/: CMakeLists.txt  Makefile  conanfile.py  main.cpp  test.cpp
modules/device-hal/: module.cmake
modules/device-hal/test/: test.cpp
modules/feetech/: .travis.yml  Makefile  README.md  conanfile.py  module.cmake
modules/feetech/test/: my_assert.hpp
modules/filter/: .travis.yml  LICENSE  Makefile  conanfile.py  module.cmake
modules/filter/test/: CMakeLists.txt  conanfile.py  main.cpp  test.cpp
modules/fs/: .gitignore  Makefile  conanfile.py
modules/fs/test/: Makefile  conanfile.py  main.cpp
modules/hal/: README.md  module.cmake
modules/hal-atmegaxx0_1/: module.cmake
modules/hal-atmegaxx0_1/src/: uart_1.cpp  uart_2.cpp  uart_3.cpp
modules/hal-atxmega/: README.md  module.cmake
modules/hal-atxmega/test/: CMakeLists.txt  test.cpp
modules/hal-stm32cubef4/: CMakeLists.txt  README.md  module.cmake
modules/hal-stm32cubef4/script/: interrupts.py
modules/hal-stm32cubef4/src/: timer_TIM1_TRG_COM_TIM11_IRQHandler.cpp  timer_TIM4_IRQHandler.cpp  (+6 more)
modules/hal-switch/: module.cmake
modules/hal/hal-atmegaxx0_1/: CMakeLists.txt  conanfile.py
modules/hal/hal-atmegaxx0_1/include/hal/atmegaxx0_1/: encoder.hpp  gpio.hpp  pwm.hpp  timer.hpp  traits.hpp  uart.hpp
modules/hal/hal-atmegaxx0_1/src/: uart_0.cpp
modules/hal/hal-atmegaxx0_1/test/: CMakeLists.txt  test.cpp
modules/hal/hdl-atmegaxx0_1/: CMakeLists.txt  conanfile.py
modules/hal/hdl-atmegaxx0_1/include/hdl/avr/: m1281.hpp  m2561.hpp  m640.hpp  sfr.hpp
modules/hal/hdl-atmegaxx0_1/include/hdl/avr/mxx0_1/: hdl.hpp  int.hpp
modules/hal/hdl-atmegaxx0_1/include/hdl/avr/mxx0_1/ext/: defs.hpp  fields.hpp  modules.hpp  regs.hpp
modules/hal/hdl-atmegaxx0_1/include/hdl/avr/mxx0_1/gpio/: defs.hpp  fields.hpp  modules.hpp  regs.hpp
modules/hal/hdl-atmegaxx0_1/include/hdl/avr/mxx0_1/timer/: defs.hpp  modules.hpp  regs.hpp
modules/hal/hdl-atmegaxx0_1/include/hdl/avr/mxx0_1/uart/: defs.hpp  modules.hpp  regs.hpp
modules/hal/hdl-atmegaxx0_1/startup/: int.cpp  int_default.hpp  start.cpp
modules/hdl-atmegaxx0_1/: README.md  module.cmake
modules/ik/: module.cmake
modules/memory_mapping/: module.cmake
modules/sasiae/: .travis.yml  CMakeLists.txt  Makefile  conanfile.py  custom.cmake  module.cmake
modules/sasiae/include/device/sasiae/: encoder.hpp  motor.hpp
modules/sasiae/include/sasiae/: asynchronous_updater.hpp  aversive.hpp  client_thread.hpp  device.hpp  task.hpp  task_manager.hpp
modules/sasiae/include/stream/sasiae/: stream.hpp
modules/sasiae/src/: aversive.cpp  client_thread.cpp
modules/sasiae/test/: CMakeLists.txt  Makefile  conanfile.py  main.cpp  test.cpp
modules/stm32cube-hal-stm32f4xx/: module.cmake
modules/stream/: .travis.yml  Makefile  README.md  conanfile.py  module.cmake
modules/stream-hal/: module.cmake
modules/string/: conanfile.py
script/: targets.py
toolchain/: generic.cmake
toolchain/avr/: atmega1281.cmake  avr.cmake
toolchain/simul/: simul.cmake
toolchain/stm32/: stm32.cmake  stm32f401cc.cmake  stm32f401ce.cmake  stm32f401re.cmake  stm32f401ve.cmake  stm32f411.cmake  stm32f429zi.cmake  stm32f446re.cmake  stm32f469.cmake
toolchains/avr/: atmega.cmake  atmega128.cmake  atmega1280.cmake  atmega2560.cmake  atmega2561.cmake  atmega32.cmake  atmega328p.cmake  atmega640.cmake  atmegaxx0_1.cmake  atxmega192a3.cmake  avr.cmake  conanfile.py
toolchains/generic/: conanfile.py
toolchains/simul/: conanfile.py  native.cmake  native32.cmake  sasiae.cmake  simul.cmake
toolchains/stm32/: conanfile.py  stm32.cmake  stm32f4.cmake  stm32f401.cmake  stm32f401vc.cmake  stm32f407.cmake  stm32f407ig.cmake  stm32f407vg.cmake  stm32f410.cmake  stm32f410rb.cmake  stm32f411ce.cmake  stm32f411re.cmake  stm32f411ve.cmake  stm32f417.cmake  stm32f417ig.cmake  stm32f429.cmake  stm32f429ni.cmake  stm32f439.cmake  stm32f439bg.cmake  stm32f439ni.cmake  stm32f446.cmake  stm32f446ze.cmake  stm32f469ni.cmake  stm32f479.cmake  stm32f479ni.cmake
toolchains/switch/: conanfile.py
tools/ik/: .gitignore  README.md
tools/tinySASIAE/: .gitignore  Makefile  README.md  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  physicsengine.cpp  physicsengine.hpp  robot.hpp  robotbin.cpp  robotbin.hpp  tinySASIAE.pro
(+278 files in other folders)
